force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/Apttus_Config2__ProductConstraintView__c.object-meta.xml
<CustomObject>
    <description>Creates product and constraint rule view table based on the definition of product scope in constraint rule condition.</description>
    <label>Product Constraint View</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>View Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Constraint Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>