force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/fields/Apttus_Config2__ConstraintRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the constraint rule associated with the product</description>
    <label>Constraint Rule</label>
    <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
    <relationshipLabel>Product Constraint Views</relationshipLabel>
    <relationshipName>ProductConstraintViews</relationshipName>
    <type>Lookup</type>
</CustomField>