force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/fields/Apttus_Config2__HasCriteriaInCondition__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HasCriteriaInCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the constraint rule has criteria in condition</description>
    <label>Has Criteria In Condition</label>
    <type>Checkbox</type>
</CustomField>