force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/fields/Apttus_Config2__IsOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the rule considers the Product only when it is added to the cart as an option.</description>
    <label>Is Option</label>
    <type>Checkbox</type>
</CustomField>