force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/fields/Apttus_Config2__IsRelated__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsRelated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the rule considers the product only if it is added to the cart as a related product.</description>
    <label>Is Related</label>
    <type>Checkbox</type>
</CustomField>