force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/fields/Apttus_Config2__MatchInLocation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the constraint rule is applied within location. If any one of the condition is matched in location the entire rule should be considered as applied within location.</description>
    <label>Match In Location</label>
    <type>Checkbox</type>
</CustomField>