force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product or option associated with the rule condition</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Constraint Views</relationshipLabel>
    <relationshipName>ProductConstraintViews</relationshipName>
    <type>Lookup</type>
</CustomField>