force-app/main/default/objects/Apttus_Config2__ProductConstraintView__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>Apttus_Config2__ProductId__c</columns>
    <columns>Apttus_Config2__ConstraintRuleId__c</columns>
    <columns>Apttus_Config2__IsOption__c</columns>
    <columns>Apttus_Config2__IsPrimary__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>